Set up del desafio 2
Se tomo como punto de partido los archivos proporcionados por el profesor
Datos - html - estilos

--- a/Desafio2/readme
+++ b/Desafio2/readme
@@ -1,1 +1,5 @@
 Repaso de Javascript 
+
+Tarea : realizar una encuesta similiar a la valoracion de clases de coder
+
+- Utilitando programacion orientada a objetos
